added eclipse files to .gitignore; using stdbool instead of #defines for true/false added stdbool.h to plutoplayer

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,11 @@ gps-sdr-sim-lut
 # Netbeans project folder
 nbproject/*
 
+# Eclipse files
+.project
+.cproject
+.settings/*
+
 # Last used USER_MOTION_SIZE variable
 .user-motion-size
 
